# coinswap

./: .gitignore  Cargo.toml  README.md  ]  codecov.yaml  commit.txt  directory.toml  log4rs.yml  maker.toml  notes.md  roadmap.md  taker.toml
.github/workflows/: build.yaml  coverage.yaml  lint.yaml  test.yaml
docs/: app_instructions.md  demo.md  dev-book.md  developer_resources.md  maker-cli.md  makerd.md  run_teleport.md  taker-tutorial.md  taker.md  tor.md  workshop.md
docs/app demos/: TOR.md  bitcoind.md  demo.md  maker-cli.md  makerd.md  taker.md  tor.md  workshop.md
git_hooks/: pre-commit
src/: contracts.rs  direct_send.rs  error.rs  fidelity_bonds.rs  funding_tx.rs  lib.rs  main.rs  maker_protocol.rs  messages.rs  offerbook_sync.rs  taker.rs  taker_protocol.rs  test_commons.rs  test_framework.rs  tor.rs  util.rs  utill.rs  wallet_sync.rs  watchtower_client.rs  watchtower_protocol.rs
src/maker/: api.rs  config.rs  error.rs  handlers.rs  maker.rs  mod.rs  server.rs
src/maker/rpc/: messages.rs  mod.rs  server.rs
src/market/: directory.rs  mod.rs
src/market/rpc/: messages.rs  mod.rs  server.rs
src/protocol/: contract.rs  error.rs  messages.rs  mod.rs
src/scripts/: maker.rs  market.rs  mod.rs  recovery.rs  taker.rs  wallet.rs  watchtower.rs
src/taker/: api.rs  config.rs  error.rs  mod.rs  offers.rs  routines.rs  taker.rs
src/taker/rpc/: messages.rs  mod.rs  server.rs
src/wallet/: api.rs  direct_send.rs  error.rs  fidelity.rs  funding.rs  mod.rs  rpc.rs  spend.rs  storage.rs  swapcoin.rs  wallet.rs
src/watchtower/: client.rs  mod.rs  routines.rs
tests/: abort1.rs  abort2_case1.rs  abort2_case2.rs  abort2_case3.rs  abort3_case1.rs  abort3_case2.rs  abort3_case3.rs  dns.rs  fidelity.rs  init.sh  maker-cli.rs  maker.rs  maker_cli.rs  malice1.rs  malice2.rs  standard_swap.rs  taker_cli.rs  test_maker_stop_before_setup.rs  test_standard_coinswap.rs  test_taker_stop_after_setup.rs
tests/test_framework/: mod.rs
