[package]
name = "coinswap"
version = "0.1.0"
authors = ["developers at citadel-tech"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = { version = "1.0.1", features = ["rand"] }
bitcoin = { version = "0.32", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
tokio = { version = "1.16.1", features = ["full"] }
log = "^0.4"
futures = "0.3"
dirs = "3.0.1"
tokio-socks = "0.5"
clap = { version = "3.2.22", features = ["derive"] }
bitcoind = "0.36"
libtor = { version = "47.13.0", optional = true }
mitosis = { version = "0.1.1", optional = true }
log4rs = "1.3.0"
openssl-sys = { version = "0.9.68", optional = true }

#Empty default feature set, (helpful to generalise in github actions)
[features]
default = ['tor']
# Mac OS needs to use the vendored version of openssl-sys as upstream `libtor` is not updated for to support mac os aarch (M series)
build-macos-aarch = ["openssl-sys/vendored"]
# The following feature set is in response to the issue described at https://github.com/rust-lang/rust/issues/45599
# Only used for running the integration tests
integration-test = []
# Only used for running the tor
tor = ['dep:libtor', 'dep:mitosis']
