[package]
name = "coinswap"
version = "0.1.0"
authors = ["developers at citadel-tech"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 =  { version = "2.1.0", features = ["rand"] }
bitcoin =  "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
log = "^0.4"
dirs = "3.0.1"
socks = "0.3.4"
clap = { version = "3.2.22", features = ["derive"] }
bitcoind = "0.36"
libtor = { version = "47.13.0", optional = true, features = ["vendored-openssl"] }
mitosis = { version = "0.1.1", optional = true }
log4rs = "1.3.0"
openssl-sys = { version = "0.9.68", optional = true }

#Empty default feature set, (helpful to generalise in github actions)
[features]
default = ['tor']
# The following feature set is in response to the issue described at https://github.com/rust-lang/rust/issues/45599
# Only used for running the integration tests
integration-test = []
#  Used for spawning Tor process and connecting to the Tor socks port
tor = ['dep:libtor', 'dep:mitosis'] 